[package]
name = "tpm"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
sha1 = "0.10.6"
p256 = "0.13.2"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
hex = "0.4.3"
x509-parser = "0.16.0"
sha2 = { version = "0.10.8", features = ["oid"] }
ureq = "2.12.1"
asn1-rs = "0.6.2"
anyhow = "1.0"
rsa = { version = "0.9.8", features = ["pem"] }